--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
                         </div>
                         <div class="temperature">
-                            <h2>13°</h2>
+                            <h2 id="weather_temp">-</h2>
                         </div>
                         <div class="location">
-                            <p>Hovsan</p>
+                            <p id="weather_city">-</p>
                         </div>
                     </div>
                 </section>
@@ -180,6 +180,7 @@
 
         <script src="script.js"></script>
         <script src="settings.js"></script>
+        <script src="weather.js"></script>
     </div>
 </body>
 
