--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
                         <h1>Be Yourself.</h1>
                     </section>
                 </section>
+                <section class="main-focus">
+                    <div class="focus-heading">
+                        <h1>What's your main focus for today?</h1>
+                    </div>
+                    <div class="focus-input">
+                        <input type="text">
+                    </div>
+                </section>
             </div>
         </main>
 
@@ -126,8 +134,8 @@
             </section>
 
             <section class="footer-center">
-                <section class="quote">
-                    <p id="quote">“The world breaks everyone and afterward many are strong at the broken places.”</p>
+                <section class="quote-container">
+                    <p class="quote">“The world breaks everyone and afterward many are strong at the broken places.”</p>
                     <div class="quote-author">
                         <p>Emest Hemingway</p>
                         <a href=""></a>
@@ -178,7 +186,7 @@
 
         </footer>
 
-        <script src="script.js"></script>
+        <script src="main.js"></script>
         <script src="settings.js"></script>
         <script src="weather.js"></script>
     </div>
