Weather try/catch

--- a/index.html
+++ b/index.html
@@ -92,16 +92,24 @@
                     </section>
                 </section>
                 <section class="quote-container">
-                    <section class="quote">
+                    <section class="main-quote">
                         <h1>Be Yourself.</h1>
                     </section>
                 </section>
-                <section class="main-focus">
-                    <div class="focus-heading">
-                        <h1>What's your main focus for today?</h1>
+                <section class="main-focus-container">
+                    <div class="main-focus-set">
+                        <div class="focus-heading">
+                            <h1>What's your main focus for today?</h1>
+                        </div>
+                        <div class="focus-input">
+                            <input type="text" id="focusInput">
+                        </div>
                     </div>
-                    <div class="focus-input">
-                        <input type="text">
+
+                    <div class="main-focus-ready">
+                        <input id="mainFocusCheckbox" type="checkbox">
+                        <h2 id="mainFocusText">Some text</h2>
+                        <button id="mainFocusDelete"><i class="fas fa-times"></i></button>
                     </div>
                 </section>
             </div>
