Main focus ready

--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
                     </section>
                 </section>
                 <section class="main-focus-container">
-                    <div class="main-focus-set">
+                    <div id="mainFocusSet" class="main-focus-set">
                         <div class="focus-heading">
                             <h1>What's your main focus for today?</h1>
                         </div>
                         <div class="focus-input">
-                            <input type="text" id="focusInput">
+                            <input type="text" id="focusInput" autocomplete="off">
                         </div>
                     </div>
 
-                    <div class="main-focus-ready">
+                    <div id="mainFocusReady" class="main-focus-ready" style="margin-top: 20px;">
                         <input id="mainFocusCheckbox" type="checkbox">
                         <h2 id="mainFocusText">Some text</h2>
                         <button id="mainFocusDelete"><i class="fas fa-times"></i></button>
