--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <section class="main-focus-container">
                     <div id="mainFocusSet" class="main-focus-set">
                         <div class="focus-heading">
-                            <h1>What's your main focus for today?</h1>
+                            <h1>What is your main focus for today?</h1>
                         </div>
                         <div class="focus-input">
                             <input type="text" id="focusInput" autocomplete="off">
@@ -143,9 +143,9 @@
 
             <section class="footer-center">
                 <section class="quote-container">
-                    <p class="quote">“The world breaks everyone and afterward many are strong at the broken places.”</p>
+                    <p class="quote" id="quote">-</p>
                     <div class="quote-author">
-                        <p>Emest Hemingway</p>
+                        <p id="quoteAuthor">-</p>
                         <a href=""></a>
                         <a href=""></a>
                     </div>
