--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                     <div id="mainFocusReady" class="main-focus-ready" style="margin-top: 20px;">
                         <input id="mainFocusCheckbox" type="checkbox">
-                        <h2 id="mainFocusText">Some text</h2>
+                        <h2 id="mainFocusText"></h2>
                         <button id="mainFocusDelete"><i class="fas fa-times"></i></button>
                     </div>
                 </section>
