--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <section class="header-left">
                     <div class="links">
                         <button id="links">Links</button>
-                        <div class="links-dropdown">
-                            <ul>
-                                <li><a href="chrome-search://local-ntp/local-ntp.html">
+                        <div id="linksDropdown" class="links-dropdown">
+                            <ul id="linksList">
+                                <!-- <li><a href="chrome-search://local-ntp/local-ntp.html">
                                         <div>
                                             Chrome Tab
                                         </div>
@@ -54,7 +54,7 @@
                                         <div>
                                             BirBank
                                         </div>
-                                    </a></li>
+                                    </a></li> -->
                             </ul>
                         </div>
                     </div>
@@ -136,9 +136,15 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><h3>Menu 2</h3></li>
-                        <li><h3>Menu 3</h3></li>
-                        <li><h3>Menu 4</h3></li>
+                        <li>
+                            <h3>Menu 2</h3>
+                        </li>
+                        <li>
+                            <h3>Menu 3</h3>
+                        </li>
+                        <li>
+                            <h3>Menu 4</h3>
+                        </li>
                     </ul>
                 </div>
                 <div class="settings">
