--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="searchbar">
+                    <div id="searchbar" class="searchbar">
                         <i class="fas fa-search"></i>
                         <form>
-                            <input type="text">
-                            <button>Search</button>
+                            <input id="search" type="text">
+                            <button id="searchButton">Search</button>
                         </form>
                     </div>
                 </section>
