--- a/Momentum.html
+++ b/Momentum.html
@@ -147,6 +147,7 @@
 
         <script src="main.js"></script>
         <script src="settings.js"></script>
+        <!-- <script src="./weather/cities.js"></script> -->
         <script src="weather.js"></script>
     </div>
 </body>
